Fixed search bar on search page mobile. Alignment of hamburger icon

--- a/css/search.css
+++ b/css/search.css
@@ -1,5 +1,22 @@
-.page-heading {
+.page-heading, .search-logo {
   display: none;
+}
+
+.search {
+  display: block;
+  position: absolute;
+  top: 12px;
+  right: 40px;
+  height: 30px;
+  width: 50%;
+  border: none;
+  margin: 0;
+  padding: 0;
+  border-radius: 5px;
+  background-image: url("../img/search.png");
+  background-repeat: no-repeat;
+  background-position: 8px;
+  text-indent: 32px;
 }
 
 .search-results {
@@ -92,6 +109,11 @@
   .footer-content {
     border-top: 1px solid #d9d8d8;
     padding-top: 50px;
+  }
+
+  .search {
+    position: initial;
+    width: initial;
   }
 
   .search-results {
